[package]
name = "nuit"
version = "0.0.3"
edition = "2021"
description = "Declarative, cross-platform UI library for Rust that uses native controls"
homepage = "https://github.com/fwcd/nuit"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nuit-derive = { version = "0.0.3", path = "nuit-derive" }
nuit-core = { version = "0.0.3", path = "nuit-core" }

[target.'cfg(target_os = "macos")'.dependencies]
nuit-bridge-swiftui = { version = "0.0.3", path = "nuit-bridge-swiftui" }

[workspace]
members = [
    "nuit-bridge-swiftui",
    "nuit-core",
    "nuit-derive",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
