[package]
name = "nuit"
description = "Declarative, cross-platform UI framework for Rust that uses native controls"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Would be nice to have https://github.com/rust-lang/cargo/issues/1197
default = ["adwaita", "swiftui"]
adwaita = ["dep:nuit-bridge-adwaita"]
swiftui = ["dep:nuit-bridge-swiftui"]
rand = ["nuit-core/rand"]

[dependencies]
nuit-derive.workspace = true
nuit-core.workspace = true
nuit-bridge-adwaita = { workspace = true, optional = true }
nuit-bridge-swiftui = { workspace = true, optional = true }

[[example]]
name = "gestures"
required-features = ["rand"]

[workspace]
members = [
    "nuit-bridge-adwaita",
    "nuit-bridge-swiftui",
    "nuit-core",
    "nuit-derive",
]

[workspace.package]
version = "0.0.11"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/fwcd/nuit"

[workspace.dependencies]
nuit-bridge-adwaita = { version = "0.0.11", path = "nuit-bridge-adwaita" }
nuit-bridge-swiftui = { version = "0.0.11", path = "nuit-bridge-swiftui" }
nuit-core = { version = "0.0.11", path = "nuit-core" }
nuit-derive = { version = "0.0.11", path = "nuit-derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
