[package]
name = "nuit-bridge-swiftui"
version = "0.0.4"
edition = "2021"
description = "SwiftUI bindings for Nuit"
homepage = "https://github.com/fwcd/nuit"
license = "GPL-3.0-or-later"
build = "build.rs"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "rust/lib.rs"

[dependencies]
nuit-core = { version = "0.0.4", path = "../nuit-core" }
