[package]
name = "nuit-bridge-swiftui"
description = "SwiftUI backend for Nuit"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
build = "build.rs"

[build-dependencies]
serde.workspace = true
serde_json.workspace = true

[lib]
path = "rust/lib.rs"

[dependencies]
nuit-core.workspace = true
