[package]
name = "nuit-core"
description = "Core structures and traits for Nuit"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
nuit-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = "0.8"
ref-cast = "1.0"
