[package]
name = "nuit-core"
description = "Core structures and traits for Nuit"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = []
rand = ["dep:rand"]

[dependencies]
nuit-derive.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = { version = "0.8", optional = true }
ref-cast = "1.0"
